# variant

./: CMakeLists.txt
src/: total_variant.cpp  total_variant.hpp  variant.hpp
test/: test_header.cpp  test_lib.cpp
